fix(theme): uat-14 cta button style and alignment

--- a/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
+++ b/web/themes/custom/ellison/components/00-base/tailwind/_tailwind.scss
@@ -2786,6 +2786,11 @@ div.webform {
   .cta-button__inner {
     gap: 2rem;
   }
+  .cta-button__inner {
+    .text-long {
+      width: 100%;
+    }
+  }
   .cta-button__button {
     width: 100%;
   }
